@@ -197,7 +197,7 @@ public Q_SLOTS:
     void searchPlayQueue();
     void realSearchPlayQueue();
     void playQueueSearchActivated(bool a);
-    void updatePlayQueue(const QList<Song> &songs);
+    void updatePlayQueue(const QList<Song> &songs, bool isComplete);
     void updateCurrentSong(Song song, bool wasEmpty=false);
     void scrollPlayQueue(bool wasEmpty=false);
     void updateStats();
